martin-mbtiles/tests/snapshots/mbtiles__diff_and_apply@hash-applied-diff.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "4CB1879C4A84910F25B9272B6E5B6E7C"  )',
    '(  "edit", "value - v2"  )',
    '(  "new", "value - new"  )',
    '(  "same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 0, "same", "51037A4A37730F52C8732586D3AAA316"  )',
    '(  1, 0, 1, "edit-v2", "FF76830FF90D79BB335884F256031731"  )',
    '(  1, 1, 0, "new", "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
